crates/forgia-qa-harness/src/snapshots/forgia_qa_harness__golden_frame__empty_capture_smoke.snap
---
source: forgia-qa-harness/src/golden_frame.rs
expression: self
---
{
  "sensors": {
    "forgia_smoke": null
  },
  "health_alerts": [],
  "final_state": null
}
